# src/modules/posts/routes/postRoutes.ts
@@ -1,8 +1,8 @@
 import { ensureAuthenticate } from '@/middleware/ensureAuthenticate'
 import { Router } from 'express'
+import { PostController } from '../controller/PostController'
 import multer from 'multer'
 import uploadConfig from '../../../config/upload'
-import { PostController } from '../controller/PostController'
 
 
 const postRouter = Router()
@@ -11,7 +11,9 @@ const postController = new PostController()
 
 const uploadVideo = multer(uploadConfig.upload("./tmp/video"));
 
-postRouter.post('/post/video',ensureAuthenticate,uploadVideo.single("video"), postController.uploadVideo)
-postRouter.post('/post/thought', ensureAuthenticate, postController.createThought)
+postRouter.post('/post', ensureAuthenticate, postController.createThought)
+postRouter.post('/post/film',ensureAuthenticate, uploadVideo.single("video"), postController.uploadVideo)
 postRouter.put('/post/thought/:postId', ensureAuthenticate, postController.editPost)
 postRouter.delete('/post/thought/:postId', ensureAuthenticate, postController.deletePost)
+
+export { postRouter }
